# nlcli

./: .coverage  .replit  CHANGELOG.md  CODEBASE_SCAN_SUMMARY.md  COMMAND_EXPANSION_PLAN.md  COMMERCIAL_LICENSE.md  CONTEXT_INTELLIGENCE_PLAN.md  COVERAGE_ANALYSIS.md  COVERAGE_IMPROVEMENT_SUMMARY.md  CURRENT_TEST_COVERAGE_STATUS.md  ENHANCED_PARTIAL_MATCHING_COMPLETED.md  FINAL_PUBLISHING_INSTRUCTIONS.md  FUZZY_REFACTOR_PLAN.md  FUZZY_REFACTOR_RESULTS.md  INTELLIGENT_PATTERNS_SUMMARY.md  LICENSE  Makefile  ORPHANED_CODE_CLEANUP_SUMMARY.md  PARTIAL_MATCHING_IMPLEMENTATION_PLAN.md  PUBLISHING_GUIDE_v1.2.0.md  PUBLISHING_INSTRUCTIONS.md  README.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.md  RELEASE_NOTES_v1.2.0.md  REPLIT_DEPLOYMENT_GUIDE.md  ROADMAP.md  SQLITE_MOCK_CLEANUP_SUMMARY.md  SQLITE_TO_FILE_MIGRATION_SUMMARY.md  TEST_COVERAGE_IMPROVEMENTS_SUMMARY.md  TIER_3_4_ROADMAP.md  TOTAL_COVERAGE_REPORT.md  WINDOWS_INSTALL.md  app.py  coverage.json  demo_fuzzy_system.py  install.bat  install.sh  install_windows.bat  main.py  (+11 more)
nlcli/: __init__.py  __main__.py  account_manager.py  ai_translator.py  cache_manager.py  cache_migrator.py  command_executor.py  command_filter.py  command_selector.py  config_manager.py  context_cli.py  context_manager.py  cursor_styles.py  enhanced_input.py  file_cache.py  fuzzy_engine.py  history_cli.py  history_manager.py  interactive_input.py  main.py  output_formatter.py  output_formatter_old.py  pattern_engine.py  safety_checker.py  typeahead.py  typo_corrector.py  utils.py
nlcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: index.html
tests/: README.md  test_ai_translator.py  test_ai_translator_basic.py  test_ai_translator_comprehensive.py  test_ai_translator_coverage.py  test_ai_translator_focused.py  test_ai_translator_mocks.py  test_cache_manager.py  test_cache_migrator_coverage.py  test_command_executor.py  test_command_executor_basic.py  test_command_executor_coverage.py  test_command_executor_extended.py  test_command_executor_final.py  test_command_executor_helpers.py  test_command_filter.py  test_command_selector_coverage.py  test_config_manager.py  test_config_manager_coverage.py  test_context_manager.py  test_context_manager_coverage.py  test_environment_context_comprehensive.py  test_file_cache.py  test_file_history.py  test_fuzzy_engine.py  test_fuzzy_engine_comprehensive.py  test_git_context_comprehensive.py  test_history_manager.py  test_history_manager_comprehensive.py  test_history_manager_simple.py  test_instant_patterns_only.py  test_integration.py  test_interactive_input.py  test_interactive_input_comprehensive.py  test_main.py  test_main_cli.py  test_main_cli_comprehensive.py  (+11 more)
(+80 files in other folders)
