[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlcli"
version = "1.0.0"
authors = [
    {name = "NLCLI Team", email = "team@nlcli.dev"},
]
description = "Universal CLI that translates natural language to OS commands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["cli", "natural language", "command line", "ai", "automation", "shell"]
dependencies = [
    "click>=8.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "psutil>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nlcli/nlcli"
"Bug Reports" = "https://github.com/nlcli/nlcli/issues"
"Source" = "https://github.com/nlcli/nlcli"
"Documentation" = "https://nlcli.readthedocs.io"

[project.scripts]
nlcli = "nlcli.main:cli"
nl = "nlcli.main:cli"

[tool.setuptools]
packages = ["nlcli"]

[tool.setuptools.package-data]
nlcli = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "openai.*",
    "rich.*",
    "click.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=nlcli",
    "--cov-report=html",
    "--cov-report=term-missing",
]
